# mcp-example

./: .env.example  README.md  docker-compose.yml
example-api/: .env.example  Dockerfile  README.md  pyproject.toml
example-api/app/: cli.py  main.py
example-api/app/dependencies/: config.py  db.py
example-api/app/models/: embeddings.py  films.py  traits.py  users.py  vector_embeddings.py
example-api/app/pipelines/: create_embeddings.py  import_film_data.py
example-api/app/routes/: __init__.py  route_tags.py
example-api/migrations/: env.py  script.py.mako
example-api/migrations/versions/: 0b7ba1397fd0_make_imdb_id_column_nullable.py  23565d4f07ae_adding_datetimestamps_for_directors_.py  29cb24cdb592_creating_film_embedding_relationship.py  36e6efb781ed_adding_film_director_relationship.py  377690c08bdc_creating_base_tables_and_relationships.py  3a4654aa0b3f_create_relationship_for_embeddings_and_.py  54ff0b55dc3f_allow_meta_score_to_be_empty.py  6150216ba533_creating_base_tables.py  8bbf01589778_creating_film_and_film_genre_tables.py  92ec869df8c2_creating_base_tables_and_relationships.py  acce847a2e87_creating_film_tables.py  aeecc22b6e09_create_embeddings_table.py  c8f4bae6a505_create_user_table.py  c95dbceb5baa_removed_certificate_column.py  d2f5b4b90fad_make_film_table_name_column_unique.py  da58594a28ea_upgrade_budget_and_revenue_to_big_int.py  e75dc74d5aa1_creating_base_tables_and_relationships.py  f1ad25bb4571_creating_base_tables_and_relationships.py  f8f01b8a4f68_creating_embeddings_model_and_attaching_.py
example-api/notebooks/: data_analysis.ipynb
example-api/scripts/: prestart.sh  start.sh
example-mcp/: Dockerfile.server  (+3 more)
(+13 files in other folders)
